Changed text-responsive to img-responsive

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -17,21 +17,21 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../carosel-images/la.jpg" alt="Los Angelos" style="width:1280px;height:620px" class="text-responsive">
+        <img src="../carosel-images/la.jpg" alt="Los Angelos" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">Los Angelos</h3>
         </div>
       </div>
 
       <div class="item">
-        <img src="../carosel-images/sf.jpg" alt="San Francisco" style="width:1280px;height:620px" class="text-responsive">
+        <img src="../carosel-images/sf.jpg" alt="San Francisco" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">San Francisco</h3>
         </div>
       </div>
 
       <div class="item">
-        <img src="../carosel-images/tsquare.jpg" alt="New York City" style="width:1280px;height:620px" class="text-responsive">
+        <img src="../carosel-images/tsquare.jpg" alt="New York City" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">New York City</h3>
         </div>
