--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -16,21 +16,21 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <div class="item active" id="images">
         <img src="../carosel-images/la.jpg" alt="Los Angelos" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">Los Angelos</h3>
         </div>
       </div>
 
-      <div class="item">
+      <div class="item" id="images">
         <img src="../carosel-images/sf.jpg" alt="San Francisco" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">San Francisco</h3>
         </div>
       </div>
 
-      <div class="item">
+      <div class="item" id="images">
         <img src="../carosel-images/tsquare.jpg" alt="New York City" style="width:1280px;height:620px" class="img-responsive">
         <div class="carousel-caption">
           <h3 style="color:white">New York City</h3>
