--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<h2 class="page-header">Dashboard</h2>
-<p>Welcome to your dashboard.</p>
+<body>
+  <div class="container">
+    <h1 class="page-header text-center">Your Dashboard</h1>
+    <a class="twitter-timeline" data-width="800" data-height="800"
+    href="https://twitter.com/NBA" data-chrome="noheader noborders">Tweets by NBA</a>
+  </div>
+</body>
