--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,8 +1,12 @@
 <h2 class="page-header">Register</h2>
 <form (submit)="onRegisterSubmit()">
   <div class="form-group">
-    <label>Name</label>
-    <input type="text" [(ngModel)] = "name" name="name" class="form-control">
+    <label>First Name</label>
+    <input type="text" [(ngModel)] = "firstname" name="firstname" class="form-control">
+  </div>
+  <div class="form-group">
+    <label>Last Name</label>
+    <input type="text" [(ngModel)] = "lastname" name="lastname" class="form-control">
   </div>
   <div class="form-group">
     <label>Username</label>
